[build-system]
requires = ["setuptools"]

[tool.setuptools]
packages = ["mvtToPng"]

[project]
name = "mvtToPng"
version = "1.0.10"
description = "Convert a vector tile to a png."
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3"
]
authors = [
    {name = "Michael Keller", email = "michaelkeller03@gmail.com"}
]


dependencies = [
    "Fiona==1.10.1",
    "geopandas==1.1.2",
    "mapbox-vector-tile==2.1.0",
    "matplotlib==3.10.8",
    "pandas==2.3.3",
    "Pillow==12.1.0",
    "Shapely==2.1.2",
    "vt2geojson==0.2.1",
    "protobuf==5.29.5"
]
