[build-system]
requires = ["setuptools"]

[tool.setuptools]
packages = ["mvtToPng"]

[project]
name = "mvtToPng"
version = "1.0.12"
description = "Convert a vector tile to a png."
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3"
]
authors = [
    {name = "Michael Keller", email = "michaelkeller03@gmail.com"}
]


dependencies = [
    "geopandas==1.1.2",
    "matplotlib==3.10.8",
    "vt2geojson==0.2.1"
]

[project.optional-dependencies]
dev = [
    "pytest==7.2.0",
    "coverage==6.5.0",
    "flake8>=7.3.0",
    "requests>=2.32.0"
]
